# adw_template_app

./: .gitignore  README.md  customize.md  meson.build  org.mydomain.Example.yml
build-aux/flatpak/: org.mydomain.Example.yml
data/: example.gresource.xml.in  example.gschema.xml.in  meson.build
data/ui/: meson.build  shortcuts.blp  window.blp
example/: constants.py.in  example.in  main.py  meson.build
example/ui/: __init__.py  window.py
